# codinglegends

./: .gitignore  Makefile  main.py  pyproject.toml
experiments/: test_agents.py
icd_codes/: base.py  icd.py  to_delete.py  xml_utils.py
icd_codes/connectors/: cms.py
notebooks/: dataset_overview.ipynb  icd_analysis.ipynb
scripts/: fetch_icd_assets.py
src/agents/: analyse_agent.py  assign_agent.py  base.py  locate_agent.py  verify_agent.py
src/agents/prompts/: analyse_codeseeker.yml.j2  assign_codeseeker.yml.j2  locate_codeseeker.yml.j2  verify_codeseeker.yml.j2
src/dataloader/: __init__.py  base.py  interface.py  mimic_utils.py
src/dataloader/adapt/: __init__.py  base.py  interface.py  utils.py
src/dataloader/adapt/adapters/: __init__.py  mdace.py  meddec.py  mimic.py  nbme.py  snomed.py  tanner.py
src/dataloader/adapt/core/: errors.py  (+2 more)
src/dataloader/mdace/: constants.py  generator.py  prepare_mdace.py
src/dataloader/meddec/: constants.py  generator.py  prepare_meddec.py
src/dataloader/mimiciii/: constants.py  mimiciii_50.py  prepare_mimiciii.py
src/dataloader/mimiciv/: constants.py  mimiciv.py  mimiciv_50.py  prepare_mimiciv.py
src/dataloader/nbme/: __init__.py  constants.py  nbme_notes.py
src/dataloader/snomed/: constants.py  generator.py  prepare_snomed.py
src/dataloader/tanner/: constants.py
src/retrieval/: __init__.py  base.py  models.py  vector.py
src/segmenters/: __init__.py  base.py  models.py  patterns.py
src/tools/: code_trie.py
tests/: test_dataset_configs.py  test_pipeline_helpers.py  test_vector_retriever_resolution.py
(+1 files in other folders)
